--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,6 @@
             "../../config.yml"
         ],
         "showLog": true,
-        "logOutput": "dap",
-        "output": "debug"
     },
     {
         "name": "CRON",
@@ -26,8 +24,18 @@
             "../../config.yml"
         ],
         "showLog": true,
-        "logOutput": "dap",
-        "output": "debug"
+    },
+    {
+        "name": "RPC",
+        "type": "go",
+        "request": "launch",
+        "mode": "debug",
+        "program": "${workspaceFolder}/cmd/rpc/main.go",
+        "args": [
+            "-config",
+            "../../config.yml"
+        ],
+        "showLog": true,
     }
     ]
 }
